# PlasticBalancedNetsPackage

./: .buildinfo  .flake8  .gitignore  CHANGELOG.rst  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.md  changelog.html  genindex.html  index.html  index.rst  modules.html  objects.inv  plastic_balanced_network.helpers.html  plastic_balanced_network.html  plastic_balanced_network.network.html  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.py
.doctrees/: changelog.doctree  environment.pickle  index.doctree  modules.doctree  plastic_balanced_network.doctree  plastic_balanced_network.helpers.doctree  plastic_balanced_network.network.doctree
Networks/: BN_KohonenRule.m  BN_Ojarule.m  BN_all_STDPs.m  BN_all_STDPs_diffIC_eiSTDP_corr.m  BN_all_STDPs_diffIC_kohonen.m  BN_all_STDPs_kohonen_corr.m  BN_all_STDPs_softHebbian_ee_distributions.m  BN_all_STDPs_timescale_eiSTDP.m  BN_all_STDPs_timescale_kohonen.m  BN_hebbian_on_EE.m  BN_hebbian_on_EE_hardconstraints.m  BN_hebbian_on_EE_softconstraints.m  BN_iSTDP_on_EI.m  BN_iSTDP_on_EIandIE.m  BN_iSTDP_on_EIandII.m  ClassicalHebbianAsNgoestoInf.m  ClassicalHebbian_Diff_cx.m  EEplasticBN.m  EEplasticSimsvsTheory.m  EtoIplastic.m  Graphical_rep_STDP_rules.ipynb  IE_Diff_ICs.m  IE_PBN_SimsvsTheory_Corr.m  IEplasticNetwork.ipynb  IEplasticNetwork.m  KohonenNetwork.m  Kohonen_Diff_cx.m  Kohonen_Ngrows.ipynb  KohonenandEIAsNgoestoInf.m  NonplasticJeevsCab.m  NonplasticJeivsCab.m  OjaSims.m  PlasticBNwEEandIEplasticity.m  Stability_analysis_kohonen_ee.ipynb  Stim_E_pop_BN_iSTDP_on_ei_ii.m  Stim_E_pop_Vogels_ei_ii.m  Timescale_analysis_kohonen_ee.ipynb  VogelsEIandIE.m  VogelsEIandII.m  analysis_ei_ii_iSTDP.ipynb  (+4 more)
Package/: .flake8  .gitignore  conf.py  requirements.txt  setup.cfg  setup.py
Package/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
Package/docs/_build/html/_sources/: index.rst.txt
Package/src/: pbn_simulation.py
Package/src/pbn/: helpers.py
Package/src/plastic-balanced-network/: helpers.py
Package/src/plastic_balanced_network/: helpers.py
Package/tests/: test_plastic_balanced_network.py
_modules/: index.html
_sources/: index.rst.txt  modules.rst.txt  plastic_balanced_network.helpers.rst.txt  plastic_balanced_network.rst.txt
_static/: documentation_options.js
docs/: conf.py  plastic_balanced_network.network.rst
notebooks/: Asymptotic_analysis.py  BN_all_STDPs.ipynb
(+60 files in other folders)
