[tool.black]
line-length = 119
target-version = ['py39', 'py310', 'py311', 'py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | logs
  | docs
  | data
  | config
  | artifacts
  | notebooks
  | original_simulations
  | ref
  | writeup
)/
'''

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]