[metadata]
name = plastic-balanced-network
version = attr: pbn.__version__
description = Plastic Balanced Network Package (Akil et al., 2021)
long_description = file: README.metadata
long_description_content_type = text/markdown
classifiers = 
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: Python
    Operating System :: Python :: 3
    Operating System :: Python :: 3.8
    Operating System :: Python :: 3.9
    Operating System :: Python :: 3.10
    Operating System :: Python :: Implementation :: CPython
    Operating System :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
package_dir = src
packages = find:
python_requires = >=3.8
setup_requires = 
    artifacts-keyring
    build
    keyring
    setuptools
    twine
install_requires = 
    numpy
    pandas
    scikit-learn
    scipy
    matplotlib
    jupyterlab
    plotnine
    seaborn
    pyyaml
    cryptography

[options.packages.find]
where = src
excludes = tests

[options.extras_require]
docs = 
    numpydoc
    sphinx
    sphinx_rtd_theme
format = 
    black
    black-jupyter
    flake8
    flake8-bugbear
    flake8-builtins
    flake8-colors
    flake8-comprehensions
    flake8-isort
    isort
    pep8-naming
test = 
    check-manifest
    coverage
    pytest
    pytest-cov
    scikit-learn
